pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-green
spec:
  containers:
    - name: webapp-green
      image: kodekloud/webapp-color
      args: ["--color=green"]
      imagePullSecret:
